[project]
name = "Anagram"
version = "1.0"
description = "A solution to the kata at https://codingdojo.org/kata/Anagram/"
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "collections-extended>=2.0.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/bcorfman/anagram"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
